# rust-core

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  e0432  epl  one_dark.tmTheme  rust-core.sublime-workspace  synhtml-css-classes.css  synhtml-css-classes.html  test.py
docs/: benchmarking.md  docs.md  readme.md
examples/: collections.rs  ctrlc.rs  defaults.rs  enum.rs  error.rs  fast.rs  flow_control.rs  html_gen.rs  html_to_stdout.rs  http.rs  lifetime.rs  macros.rs  mods.rs  oop.rs  own.rs  panic_test.rs  python.rs  spinners.rs  structs.rs  sub.rs  synh.rs  test.rs  types.rs  unittesting.rs  works.rs
src/: aesthetics.rs  algorithms.rs  lib.rs  main.rs  test.rs
src/handler/: mod.rs  something.rs
tests/: test_algorithms.rs
