[package]
name = "core"
version = "0.0.1"
authors = [ "Your name <alexxander18360@gmail.com>" ]

[dependencies]
# for f string formatting expression just like python
fstrings = "0.2.3"
# for core/aesthetics.rs just like pyohn
ansi_term = "0.12"
time = "0.1"
gtk = "*"
# gdk = "*"
# glib = "*"
cairo-rs = "*"
libc = "0.2"
console = "0.15.0"
termion = "1.5.5"
rand = "0.8.5"

# [dependencies.gtk]
# git = "https://github.com/rust-gnome/gtk.git"
# features = ["gtk_3_10"]
#
# [dependencies.cairo-rs]
# git = "https://github.com/rust-gnome/cairo.git"
